# rustgenhash

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rustfmt.toml
.github/workflows/: audit.yml  build.yml  release.yml  rust-clippy.yml  rust.yml
scripts/tools/: print_multihash.rs
snap/: snapcraft.yaml
specs/011-mac-kdf-benchmark/contracts/: benchmark-summary.schema.json
src/: analyze.rs  app.rs  cli.rs  cmd.rs  command.rs  hash.rs  hhhash.rs  lib.rs  main.rs  random.rs
src/lib/: hash.rs  random.rs
src/rgh/: analyze.rs  app.rs  benchmark.rs  hash.rs  hhhash.rs  multihash.rs  output.rs  random.rs
src/rgh/audit/: fs.rs  mod.rs  report.rs  runner.rs
src/rgh/benchmark/: digest.rs  kdf.rs  mac.rs  mod.rs  warnings.rs
src/rgh/cli/: algorithms.rs  benchmark.rs  defs.rs  handlers.rs  interactive.rs  mod.rs  parser.rs
src/rgh/console/: builtins.rs  color.rs  completion.rs  dispatcher.rs  export.rs  help.rs  history.rs  interpolation.rs  mod.rs  parser.rs  script.rs  session.rs  variables.rs
src/rgh/digest/: commands.rs  mod.rs
src/rgh/file/: manifest.rs  mod.rs  progress.rs  walker.rs
src/rgh/kdf/: commands.rs  hkdf.rs  mod.rs  profile.rs
src/rgh/mac/: blake3.rs  cmac.rs  commands.rs  executor.rs  hmac.rs  key.rs  kmac.rs  mod.rs  poly1305.rs  registry.rs
src/rgh/weak/: mod.rs
tests/: audit.rs  benchmark_kdf.rs  benchmark_mac.rs  benchmark_summarize.rs  benchmark_warnings.rs  hashes.rs  history_serialization.rs  interactive_console.rs  mac_hmac.rs  mac_vectors.rs  multihash_encoder.rs  replay_last.rs  replay_persisted.rs  replay_select.rs  stdio_multihash.rs  weak_warning.rs
tests/cli/: history_serialization.rs  replay_last.rs  replay_persisted.rs  replay_select.rs
tests/fixtures/: README.md
tests/fixtures/analyze/: sha256_detect.json
tests/fixtures/benchmark/: baseline_kdf_console.snap  baseline_mac_console.snap  benchmark_skip.json  kdf_grouped_warnings_console.snap  mac_grouped_warnings_console.snap  sha256_asm.json  summarize_console_grouped.snap  summarize_markdown_grouped.md
tests/fixtures/compare/: case_insensitive.json
tests/fixtures/digest/: README.md  digest_file_large_stream.json  digest_file_sha1_warning.json  digest_file_sha256_multihash.json  digest_stdio_blake3_multihash.json  digest_stdio_md5_multihash_unsupported.json  digest_stdio_md5_warning.json  digest_string_empty.json  digest_string_md5_warning.json  digest_string_sha256_multihash.json  file_error_strategy_continue.json  file_recursive_sha256.json  sha256_file.json  sha256_string.json
tests/fixtures/digest/error_strategy_tree/: broken.ln  ok.txt
tests/fixtures/digest/large_file/: README.md
tests/fixtures/digest/recursive_tree/root/: alpha.txt
tests/fixtures/digest/recursive_tree/root/nested/: beta.txt
tests/fixtures/digest/recursive_tree/root/nested/deeper/: gamma.txt
tests/fixtures/file/: cmac_evidence.txt  sample.txt  sha1_sample.json
tests/fixtures/header/: hhhash_skip.json
tests/fixtures/interactive/: console_color_auto.json  console_color_auto.txt  console_color_disabled.json  console_color_disabled.txt  console_color_forced.json  console_color_forced.txt  console_completion_digest.txt  console_completion_k.txt  console_completion_script.txt  console_digest_basic.txt  console_help_digest.txt  console_help_script.txt  console_help_unknown.stderr.txt  console_help_unknown.txt  console_history_seed.txt  console_history_show.txt  console_script_error.txt  console_script_success.txt  console_vars_export.txt  console_vars_export_secrets.txt  interactive_md5_warning.json  interactive_skip.json
tests/fixtures/interactive/scripts/: child_streams_guard.rgh  color_always.rgh  color_auto.rgh  color_never.rgh  complete_digest.rgh  complete_k.rgh  complete_script.rgh  console_history_seed.rgh  console_history_show.rgh  export_vars_masked.rgh  export_vars_secrets.rgh  help_digest.rgh  help_script.rgh  help_unknown.rgh  script_error.rgh  vars_chain.rgh
tests/fixtures/kdf/: README.md  argon2_basic.json  hkdf_sha256_basic.json  hkdf_sha512_info.json  kdf_hkdf_blake3_basic.json  kdf_hkdf_expand_only.json  kdf_pbkdf2_invalid_iterations.json  kdf_pbkdf2_profile_nist_sp800132.json  kdf_scrypt_profile_owasp.json  kdf_scrypt_zero_password.json  pbkdf2_sha256.json
tests/fixtures/keys/: README.md  cmac_invalid.key  hkdf_prk.key  hmac.key  kmac.key  poly1305.key  poly1305_short.key
tests/fixtures/mac/: README.md  mac_blake3_keyed_stdio.json  mac_cmac_aes128_string.json  mac_cmac_aes256_file.json  mac_cmac_padding_mismatch.json  mac_hmac_sha1_legacy.json  mac_hmac_sha256_string.json  mac_kmac256_file.json  mac_poly1305_key_error.json  mac_poly1305_mismatched_key.json  mac_poly1305_stdio.json
tests/fixtures/random/: random_skip.json
tests/fixtures/stdio/: md5_lines.json
tests/fixtures/string/: argon2_hash_only.json  bcrypt_hash_only.json  scrypt_hash_only.json  sha256_basic.json
