[package]
name = "rustgenhash"
version = "0.5.10"
license = "MIT/Apache-2.0"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
description = "A tool to generate hashes from the command line."
homepage = "https://github.com/vschwaberow/rustgenhash"
repository = "https://github.com/vschwaberow/rustgenhash"
readme = "README.md"
keywords = ["cli", "crypto", "hashes", "rust"]
edition = "2018"
categories = ["command-line-utilities", "cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[features]
default = ["std"]
std = []

[dependencies]
argon2 = "0.4.1"
balloon-hash = "0.3.0"
base64 = "0.13.0"
blake2 = "0.10.4"
clap = { version = "4.0.0-rc.2", features = ["derive", "cargo"] }
clap_complete = "4.0.0-rc.1"
digest = { version = "0.10.3", features = ["std"] }
gost94 = "0.10.3"
groestl = "0.10.1"
hex = "0.4.3"
hex-literal = "0.3.4"
md-5 = "0.10.4"
md2 = "0.10.1"
md4 = "0.10.1"
password-hash = "0.4.2"
pbkdf2 = "0.11.0"
rand_core = { version = "0.6.3", features = ["std"] }
ripemd = "0.1.1"
scrypt = "0.10.0"
sha-1 = "0.10.0"
sha2 = "0.10.5"
sha3 = "0.10.4"
shabal = "0.4.1"
sm3 = "0.4.1"
streebog = "0.10.1"
tiger = "0.2.1"
whirlpool = "0.10.4"
