[package]
name = "rustgenhash"
version = "0.11.0"
license = "MIT"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
description = "A tool to generate hashes from the command line."
homepage = "https://github.com/vschwaberow/rustgenhash"
repository = "https://github.com/vschwaberow/rustgenhash"
readme = "README.md"
keywords = ["cli", "crypto", "hashes", "rust"]
edition = "2021"
categories = ["command-line-utilities", "cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rgh"
path = "src/bin/main.rs"

[[bin]]
name = "print_multihash"
path = "scripts/tools/print_multihash.rs"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[features]
default = ["std", "asm-accel"]
std = []
asm-accel = [
	"sha-1/asm",
	"sha2/asm",
	"sha2/asm-aarch64",
	"md-5/asm",
	"whirlpool/asm",
]
portable-only = ["std"]

[dependencies]
argon2 = "0.4.1"
ascon-hash = "0.2.0"
balloon-hash = "0.3.0"
base64 = "0.21"
bcrypt-pbkdf = "0.9.0"
belt-hash = "0.1.0"
aes = "0.8"
cmac = "0.7"
poly1305 = "0.8"
blake2 = "0.10.4"
blake3 = { version = "1.5.0", features = ["traits-preview"] }
clap = { version = "4.0.10", features = ["derive", "cargo"] }
clap_complete = "4.0.2"
colored = "2.1.0"
csv = "1.3"
dialoguer = "0.11.0"
digest = { version = "0.10.5", features = ["std"] }
hmac = "0.12"
hkdf = "0.12"
multibase = "0.9" # Multiformats multibase (https://github.com/multiformats/multibase)
multihash = "0.18" # Multiformats multihash spec (https://github.com/multiformats/multihash)
fsb = "0.1.3"
getrandom = "0.2.16"
gost94 = "0.10.4"
groestl = "0.10.1"
hex = "0.4.3"
jh = "0.1.0"
memmap2 = "0.9"
md-5 = "0.10.5"
md2 = "0.10.2"
md4 = "0.10.2"
password-hash = "0.4.2"
pbkdf2 = "0.11.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
rand_hc = "0.3.1"
rand_isaac = "0.3.0"
rand_jitter = "0.3.0"
rand_pcg = "0.3.1"
rand_xorshift = "0.3.0"
regex = "1.7.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
ripemd = "0.1.3"
rayon = "1.10"
scrypt = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10.0"
sha-crypt = "0.4.0"
sha2 = "0.10.6"
sha3 = "0.10.5"
shabal = "0.4.1"
skein = "0.1.0"
sm3 = "0.4.1"
streebog = "0.10.2"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.3.0"
tiger = "0.2.1"
url = "2.4.1"
uuid = { version = "1.3.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
whirlpool = "0.10.4"
walkdir = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
zeroize = "1.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.16"
features = ["js"]

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1.3.0"
features = ["js"]
